# buggybot2

./: .gitignore  .gitmodules  README  README.md
doc/: RIOT-experiment.md
elec/: .gitignore
elec/Hydra/: Arduino.sch  Com.sch  Components.md  GP2.sch  Hydra-cache.lib  SwitchInput.sch
elec/Hydra/Footprints.pretty/: 3-state_jumper.kicad_mod  ARDUINO_MEGA_SHIELD.kicad_mod  Conn_01x05.kicad_mod  SOT-23-3-bipolar-transistor.kicad_mod
elec/adm_shield/: adm_shield-cache.lib  adm_shield.cmp  adm_shield.kicad_pcb  adm_shield.net  adm_shield.pro  adm_shield.sch  alim.sch  arduino.sch  gp2.sch  gpio.sch  i2c.sch  leg.sch  servo.sch  spi.sch  uart.sch
elec/adm_shield/sch/: adm_shield-cache.lib  adm_shield.pro  (+3 more)
elec/hydra/: Hydra.kicad_pcb  Hydra.pro  Hydra.sch  Power.sch  Servo.sch
elec/lib/: pololu.lib  teensy.lib
elec/mod/: perso.mod  teensy.mod
elec/teensy_shield/: GP2.sch  _autosave-teensy_shield.kicad_pcb  accelero.sch  alim_log.sch  alim_pow.sch  angle_sensor.sch  current_sensor.sch  file55E7F03D.sch  fp-lib-table  joint.sch  mcu.sch  motor.sch  motor_driver.sch  regulator.sch  servo.sch  teensy_shield-cache.lib  teensy_shield.net  teensy_shield.pro  teensy_shield.sch
meca/: buggybot.blend  buggybot2_mgi.mac  ik_export.py  mgi.mac  utils.mac
meca/equations/: mcd.mac  mgd.mac  mgi.mac  tr_homogene.mac  utils.mac
meca/lib/: optoforce.ipt  servo.ipt
meca/measures/: v1.ini
meca/mgd/: buggybot2_mgd.mac  tr_homogene.mac
meca/print/: forearm_1.stl  forearm_2.stl  forearm_3.stl  forearm_anti_axe.stl  optoforce_base.stl
meca/solve/: buggybot2.blend  buggybot2_climb.blend  comm.py  leg.py  main.py  mesh_generator.py  mgd.py  mgi.py  paul.py  robot.py  server.py  simu.blend
meca/v2015/: anti_axe.ipt  arm.ipt  base.ipt  forearm.ipt  shoulder.ipt  shoulder_base.ipt
meca/v2016/: forearm.ipt  forearm_1.ipt  forearm_2.ipt  forearm_3.ipt  forearm_anti_axe.ipt  forearm_block.iam  optoforce_base.ipt
soft/: .gitignore
soft/adc/: adc_pin.hpp  compile.sh  main.cpp  test.cpp
soft/app/: .gitignore  Makefile
soft/app/embed-controller/: CMakeLists.txt  main.cpp  port_client.hpp
soft/app/ik/: CMakeLists.txt  Makefile  chain_from_ik_export.hpp  conanfile.py  ik_export.hpp  main.cpp  robot_armature_joint_forearm_lb_endpoint.cpp  robot_armature_joint_forearm_lb_endpoint.hpp  robot_armature_joint_forearm_rb_endpoint.cpp  robot_armature_joint_forearm_rf_endpoint.cpp  robot_armature_joint_forearm_rf_endpoint.hpp  robot_model.cpp  robot_model.hpp
soft/app/optoforce/: CMakeLists.txt  main.cpp  parser.hpp  port_client.hpp
soft/app/serial-controller/: CMakeLists.txt  Makefile  conanfile.py  main.cpp
soft/app/servo-mapper/: CMakeLists.txt  Makefile  main.cpp
soft/app/teleopt-client/: CMakeLists.txt  animation.hpp  main.cpp
soft/app/teleopt-server/: CMakeLists.txt  Makefile  anim_door.hpp  anim_walk.hpp  anim_walk3.hpp  conanfile.py  main.cpp
soft/app/test/: CMakeLists.txt  anim_stand.hpp  anim_walk.hpp  compile.sh  main.cpp  shell.hpp
soft/calib/: Makefile  cmd.hpp  cmd_servo.cpp  cmd_servo.hpp  compile.sh  deploy.sh  list_servo.hpp  main.cpp  servo_config.hpp  servo_tester.hpp  servos.cpp  servos.hpp  shell.cpp
soft/embed/: clean.sh
soft/lib/messages/: CMakeLists.txt  endpoint_action.hpp  id_value.hpp  optoforce_data.hpp  servo_action.hpp  servo_config.hpp
soft/protocol/: ap.hpp  ap_parser.hpp  arduino.cpp  compile.sh  compile2.sh  deploy.sh  host.py  main.cpp
soft/sensor/: compile.sh  main.cpp
soft/servos/: buggybot_servos.hpp  servo_impl.hpp
soft/strategy/: .gitignore  CMakeLists.txt  buggybot2.blend  buggybot2_turn.blend  buggybot2_walk.blend  config.py  host.py  mgd.py  mgi.py  save.py  teleopt.sh  test.py
soft/strategy/app/blender_viz/: CMakeLists.txt  blender_viz_node.cpp  blender_viz_node.hpp  buggybot2.blend  main.cpp  test.py
soft/strategy/app/body_pose/: CMakeLists.txt  body_pose_node.cpp  body_pose_node.hpp  main.cpp
soft/strategy/app/body_pose/test/: test.cpp
soft/strategy/app/calib/: calib.py
soft/strategy/app/msg/: buggybot.idl
soft/strategy/app/teleopt/: server.py
soft/strategy/lib/: protocol.py
soft/strategy/lib/buggybot_2015_mgd/: CMakeLists.txt  buggybot_2015_mgd.cpp  buggybot_2015_mgd.hpp  utils.hpp
soft/strategy/lib/messages/: buggybot.idl
soft/strategy/lib/mgd/: CMakeLists.txt  mgd.cpp  mgd.hpp
soft/strategy/lib/node/: CMakeLists.txt  node.hpp  reader_node.hpp  writer_node.hpp
soft/strategy/mod/: calib.py  calib2.py  crawl.py  servo.py  sit.py  turn.py  walk.py
soft/strategy/test/: buggybot2.blend  buggybot2_sit.blend  buggybot2_turn.blend  comm.py  main.py  mgi.py  paul.py  run.sh  save.py  test2.py
soft/strategy/test/lib/: protocol.py
soft/strategy/test/mod/: anim.py  calib.py  crawl2.py  turn.py  walk.py
soft/test/ik-tester/: CMakeLists.txt  main.cpp
soft/test/iotlab/embed-full/: CMakeLists.txt  Makefile  conanfile.py
soft/test/iotlab/embed-full/src/: control.cpp  main.cpp  model.cpp  model.hpp  server.cpp  view.cpp
soft/test/iotlab/embed-full/src/anim_control/: command_handler.cpp  command_handler.hpp  stand.cpp  stand.hpp  turn.cpp  turn.hpp  walk.cpp  walk.hpp
soft/test/iotlab/embed-full/src/ik/: fixed_point.hpp  robot_armature_joint_forearm_lb_endpoint.cpp  robot_armature_joint_forearm_lb_endpoint.hpp  robot_armature_joint_forearm_lf_endpoint.cpp  robot_armature_joint_forearm_lf_endpoint.hpp  robot_armature_joint_forearm_rb_endpoint.cpp  robot_armature_joint_forearm_rb_endpoint.hpp  robot_armature_joint_forearm_rf_endpoint.cpp  robot_armature_joint_forearm_rf_endpoint.hpp  trigo.hpp
soft/test/iotlab/embed-full/src/iotlab/: alive.cpp
soft/test/iotlab/embed-full/src/servo_collection/: anim_handler.cpp  anim_handler.hpp  servo_handler.cpp  servo_handler.hpp
soft/test/iotlab/embed-full/src/servo_mapper/: config_handler.cpp  config_handler.hpp  label_handler.cpp  label_handler.hpp
soft/test/iotlab/embed-io/: CMakeLists.txt  Makefile  anim_handler.cpp  anim_handler.hpp  server.cpp  servo_handler.cpp  servo_handler.hpp
soft/test/teleopt-iotlab/: CMakeLists.txt  Makefile  main.cpp
(+119 files in other folders)
